discussion/kv_engine/126160/126160_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add support for magma GetDocs API

Change-Id: Iff70f5b8a40f00b2cf824152d0216207e2ed7ca0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-20 21:21:32.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 21:32:03.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3300/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3239/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3239/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3222/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3222/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11090/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11090/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27634/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(870): error C2065: "OperationsList": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27634/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1804/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:5: error: no template named "OperationsList" [clang-diagnostic-error]
    OperationsList<Magma::GetOperation> getOps;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:895:9: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
        vb_bgfetch_item_ctx_t* bg_itm_ctx =
        ^~~~~~~~~~~~~~~~~~~~~
        auto

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1804/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:5:
error: no template named "OperationsList" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1804/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23633/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:5:
error: no template named "OperationsList"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23633/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2284/ : FAILURE

Compile error at [2020-04-20T21:23:30.393Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:870:5:
error: use of undeclared identifier "OperationsList"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2284/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/323/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
